y.output
Terminals unused in grammar

   APPROXNUM
   '!'
   '|'
   '&'
   '%'
   '^'


State 42 conflicts: 1 shift/reduce
State 43 conflicts: 1 shift/reduce
State 91 conflicts: 1 shift/reduce
State 101 conflicts: 2 reduce/reduce
State 139 conflicts: 5 shift/reduce, 4 reduce/reduce


Grammar

    0 $accept: statement_list $end

    1 statement_list: statement_list statement ';' '\n'
    2               | %empty

    3 statement: select_statement

    4 expr: INTNUMBER
    5     | '(' expr ')'
    6     | expr '+' expr
    7     | expr '-' expr
    8     | expr '*' expr
    9     | expr '/' expr
   10     | expr COMPARISON expr
   11     | expr AND expr
   12     | expr OR expr
   13     | NAME
   14     | NAME '.' NAME
   15     | STRING
   16     | expr LIKE expr
   17     | expr IN '(' val_list ')'
   18     | expr BETWEEN expr AND expr
   19     | NAME '(' opt_val_list ')'

   20 opt_val_list: %empty
   21             | val_list

   22 val_list: expr
   23         | expr ',' val_list

   24 select_statement: query_expression

   25 query_expression: query_specification opt_query
   26                 | '(' query_expression ')' opt_query

   27 opt_query: %empty
   28          | union_list

   29 union_list: union_statement
   30           | union_list union_statement

   31 union_statement: opt_union query_specification
   32                | opt_union '(' query_expression ')'

   33 opt_union: UNION
   34          | UNION ALL
   35          | EXCEPT
   36          | INTERSECT

   37 query_specification: SELECT select_options top_options select_expr_list opt_into opt_from_list opt_where opt_groupby opt_having opt_orderby

   38 select_options: %empty
   39               | select_options ALL
   40               | select_options DISTINCT

   41 top_options: %empty
   42            | top_options TOP expr PERCENT WITH TIES
   43            | top_options TOP expr PERCENT
   44            | top_options TOP expr WITH TIES
   45            | top_options TOP expr

   46 select_expr_list: select_expr
   47                 | select_expr_list ',' select_expr

   48 select_expr: '*'
   49            | expr opt_as_alias
   50            | NAME '=' expr

   51 opt_as_alias: %empty
   52             | AS NAME
   53             | NAME

   54 opt_into: %empty
   55         | INTO NAME

   56 opt_from_list: %empty
   57              | FROM opt_from

   58 opt_from: from_statement
   59         | opt_from ',' from_statement

   60 from_statement: NAME opt_as_alias
   61               | NAME '.' NAME opt_as_alias
   62               | joined_table

   63 joined_table: from_statement join_type from_statement ON expr
   64             | from_statement CROSS JOIN from_statement
   65             | NAME cross_outer APPLY NAME
   66             | '(' joined_table ')'

   67 join_type: opt_join_type opt_join_hint JOIN

   68 opt_join_type: %empty
   69              | INNER
   70              | LEFT opt_outer
   71              | RIGHT opt_outer
   72              | FULL opt_outer

   73 opt_outer: %empty
   74          | OUTER

   75 opt_join_hint: %empty
   76              | REDUCE
   77              | REPLICATE
   78              | REDISTRIBUTE

   79 cross_outer: CROSS
   80            | OUTER

   81 opt_where: %empty
   82          | WHERE expr

   83 opt_groupby: %empty
   84            | GROUP BY groupby_list

   85 groupby_list: groupby_statement
   86             | groupby_list ',' groupby_statement

   87 groupby_statement: expr
   88                  | ROLLUP '(' groupby_expr_list ')'
   89                  | CUBE '(' groupby_expr_list ')'
   90                  | GROUPING SETS '(' grouping_set ')'
   91                  | '(' ')'

   92 groupby_expr_list: groupby_expr
   93                  | groupby_expr_list ',' groupby_expr

   94 groupby_expr: expr
   95             | '(' groupby_expr ',' expr ')'

   96 grouping_set: '(' ')'
   97             | grouping_set_item_list

   98 grouping_set_item_list: grouping_set_item
   99                       | grouping_set_item_list ',' grouping_set_item

  100 grouping_set_item: groupby_expr
  101                  | ROLLUP '(' groupby_expr_list ')'
  102                  | CUBE '(' groupby_expr_list ')'

  103 opt_having: %empty
  104           | HAVING expr

  105 opt_orderby: %empty
  106            | ORDER BY orderby_statement_list

  107 orderby_statement_list: orderby_statement
  108                       | orderby_statement_list ',' orderby_statement

  109 orderby_statement: expr opt_asc_desc

  110 opt_asc_desc: %empty
  111             | ASC
  112             | DESC


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1
'!' (33)
'%' (37)
'&' (38)
'(' (40) 5 17 19 26 32 66 88 89 90 91 95 96 101 102
')' (41) 5 17 19 26 32 66 88 89 90 91 95 96 101 102
'*' (42) 8 48
'+' (43) 6
',' (44) 23 47 59 86 93 95 99 108
'-' (45) 7
'.' (46) 14 61
'/' (47) 9
';' (59) 1
'=' (61) 50
'^' (94)
'|' (124)
error (256)
NAME (258) 13 14 19 50 52 53 55 60 61 65
INTNUMBER (259) 4
APPROXNUM (260)
STRING (261) 15
SELECT (262) 37
FROM (263) 57
ALL (264) 34 39
DISTINCT (265) 40
TOP (266) 42 43 44 45
PERCENT (267) 42 43
AS (268) 52
WITH (269) 42 44
TIES (270) 42 44
INTO (271) 55
WHERE (272) 82
LIKE (273) 16
AND (274) 11 18
OR (275) 12
IN (276) 17
GROUP (277) 84
BY (278) 84 106
ROLLUP (279) 88 101
CUBE (280) 89 102
GROUPING (281) 90
SETS (282) 90
HAVING (283) 104
ON (284) 63
JOIN (285) 64 67
INNER (286) 69
OUTER (287) 74 80
RIGHT (288) 71
LEFT (289) 70
FULL (290) 72
REDUCE (291) 76
REPLICATE (292) 77
REDISTRIBUTE (293) 78
CROSS (294) 64 79
APPLY (295) 65
ORDER (296) 106
ASC (297) 111
DESC (298) 112
UNION (299) 33 34
INTERSECT (300) 36
EXCEPT (301) 35
BETWEEN (302) 18
COMPARISON (303) 10


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
statement_list (66)
    on left: 1 2, on right: 0 1
statement (67)
    on left: 3, on right: 1
expr (68)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19, on right: 5
    6 7 8 9 10 11 12 16 17 18 22 23 42 43 44 45 49 50 63 82 87 94 95
    104 109
opt_val_list (69)
    on left: 20 21, on right: 19
val_list (70)
    on left: 22 23, on right: 17 21 23
select_statement (71)
    on left: 24, on right: 3
query_expression (72)
    on left: 25 26, on right: 24 26 32
opt_query (73)
    on left: 27 28, on right: 25 26
union_list (74)
    on left: 29 30, on right: 28 30
union_statement (75)
    on left: 31 32, on right: 29 30
opt_union (76)
    on left: 33 34 35 36, on right: 31 32
query_specification (77)
    on left: 37, on right: 25 31
select_options (78)
    on left: 38 39 40, on right: 37 39 40
top_options (79)
    on left: 41 42 43 44 45, on right: 37 42 43 44 45
select_expr_list (80)
    on left: 46 47, on right: 37 47
select_expr (81)
    on left: 48 49 50, on right: 46 47
opt_as_alias (82)
    on left: 51 52 53, on right: 49 60 61
opt_into (83)
    on left: 54 55, on right: 37
opt_from_list (84)
    on left: 56 57, on right: 37
opt_from (85)
    on left: 58 59, on right: 57 59
from_statement (86)
    on left: 60 61 62, on right: 58 59 63 64
joined_table (87)
    on left: 63 64 65 66, on right: 62 66
join_type (88)
    on left: 67, on right: 63
opt_join_type (89)
    on left: 68 69 70 71 72, on right: 67
opt_outer (90)
    on left: 73 74, on right: 70 71 72
opt_join_hint (91)
    on left: 75 76 77 78, on right: 67
cross_outer (92)
    on left: 79 80, on right: 65
opt_where (93)
    on left: 81 82, on right: 37
opt_groupby (94)
    on left: 83 84, on right: 37
groupby_list (95)
    on left: 85 86, on right: 84 86
groupby_statement (96)
    on left: 87 88 89 90 91, on right: 85 86
groupby_expr_list (97)
    on left: 92 93, on right: 88 89 93 101 102
groupby_expr (98)
    on left: 94 95, on right: 92 93 95 100
grouping_set (99)
    on left: 96 97, on right: 90
grouping_set_item_list (100)
    on left: 98 99, on right: 97 99
grouping_set_item (101)
    on left: 100 101 102, on right: 98 99
opt_having (102)
    on left: 103 104, on right: 37
opt_orderby (103)
    on left: 105 106, on right: 37
orderby_statement_list (104)
    on left: 107 108, on right: 106 108
orderby_statement (105)
    on left: 109, on right: 107 108
opt_asc_desc (106)
    on left: 110 111 112, on right: 109


State 0

    0 $accept: . statement_list $end

    $default  reduce using rule 2 (statement_list)

    statement_list  go to state 1


State 1

    0 $accept: statement_list . $end
    1 statement_list: statement_list . statement ';' '\n'

    $end    shift, and go to state 2
    SELECT  shift, and go to state 3
    '('     shift, and go to state 4

    statement            go to state 5
    select_statement     go to state 6
    query_expression     go to state 7
    query_specification  go to state 8


State 2

    0 $accept: statement_list $end .

    $default  accept


State 3

   37 query_specification: SELECT . select_options top_options select_expr_list opt_into opt_from_list opt_where opt_groupby opt_having opt_orderby

    $default  reduce using rule 38 (select_options)

    select_options  go to state 9


State 4

   26 query_expression: '(' . query_expression ')' opt_query

    SELECT  shift, and go to state 3
    '('     shift, and go to state 4

    query_expression     go to state 10
    query_specification  go to state 8


State 5

    1 statement_list: statement_list statement . ';' '\n'

    ';'  shift, and go to state 11


State 6

    3 statement: select_statement .

    $default  reduce using rule 3 (statement)


State 7

   24 select_statement: query_expression .

    $default  reduce using rule 24 (select_statement)


State 8

   25 query_expression: query_specification . opt_query

    UNION      shift, and go to state 12
    INTERSECT  shift, and go to state 13
    EXCEPT     shift, and go to state 14

    $default  reduce using rule 27 (opt_query)

    opt_query        go to state 15
    union_list       go to state 16
    union_statement  go to state 17
    opt_union        go to state 18


State 9

   37 query_specification: SELECT select_options . top_options select_expr_list opt_into opt_from_list opt_where opt_groupby opt_having opt_orderby
   39 select_options: select_options . ALL
   40               | select_options . DISTINCT

    ALL       shift, and go to state 19
    DISTINCT  shift, and go to state 20

    $default  reduce using rule 41 (top_options)

    top_options  go to state 21


State 10

   26 query_expression: '(' query_expression . ')' opt_query

    ')'  shift, and go to state 22


State 11

    1 statement_list: statement_list statement ';' . '\n'

    '\n'  shift, and go to state 23


State 12

   33 opt_union: UNION .
   34          | UNION . ALL

    ALL  shift, and go to state 24

    $default  reduce using rule 33 (opt_union)


State 13

   36 opt_union: INTERSECT .

    $default  reduce using rule 36 (opt_union)


State 14

   35 opt_union: EXCEPT .

    $default  reduce using rule 35 (opt_union)


State 15

   25 query_expression: query_specification opt_query .

    $default  reduce using rule 25 (query_expression)


State 16

   28 opt_query: union_list .
   30 union_list: union_list . union_statement

    UNION      shift, and go to state 12
    INTERSECT  shift, and go to state 13
    EXCEPT     shift, and go to state 14

    $default  reduce using rule 28 (opt_query)

    union_statement  go to state 25
    opt_union        go to state 18


State 17

   29 union_list: union_statement .

    $default  reduce using rule 29 (union_list)


State 18

   31 union_statement: opt_union . query_specification
   32                | opt_union . '(' query_expression ')'

    SELECT  shift, and go to state 3
    '('     shift, and go to state 26

    query_specification  go to state 27


State 19

   39 select_options: select_options ALL .

    $default  reduce using rule 39 (select_options)


State 20

   40 select_options: select_options DISTINCT .

    $default  reduce using rule 40 (select_options)


State 21

   37 query_specification: SELECT select_options top_options . select_expr_list opt_into opt_from_list opt_where opt_groupby opt_having opt_orderby
   42 top_options: top_options . TOP expr PERCENT WITH TIES
   43            | top_options . TOP expr PERCENT
   44            | top_options . TOP expr WITH TIES
   45            | top_options . TOP expr

    NAME       shift, and go to state 28
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    TOP        shift, and go to state 31
    '*'        shift, and go to state 32
    '('        shift, and go to state 33

    expr              go to state 34
    select_expr_list  go to state 35
    select_expr       go to state 36


State 22

   26 query_expression: '(' query_expression ')' . opt_query

    UNION      shift, and go to state 12
    INTERSECT  shift, and go to state 13
    EXCEPT     shift, and go to state 14

    $default  reduce using rule 27 (opt_query)

    opt_query        go to state 37
    union_list       go to state 16
    union_statement  go to state 17
    opt_union        go to state 18


State 23

    1 statement_list: statement_list statement ';' '\n' .

    $default  reduce using rule 1 (statement_list)


State 24

   34 opt_union: UNION ALL .

    $default  reduce using rule 34 (opt_union)


State 25

   30 union_list: union_list union_statement .

    $default  reduce using rule 30 (union_list)


State 26

   32 union_statement: opt_union '(' . query_expression ')'

    SELECT  shift, and go to state 3
    '('     shift, and go to state 4

    query_expression     go to state 38
    query_specification  go to state 8


State 27

   31 union_statement: opt_union query_specification .

    $default  reduce using rule 31 (union_statement)


State 28

   13 expr: NAME .
   14     | NAME . '.' NAME
   19     | NAME . '(' opt_val_list ')'
   50 select_expr: NAME . '=' expr

    '('  shift, and go to state 39
    '.'  shift, and go to state 40
    '='  shift, and go to state 41

    $default  reduce using rule 13 (expr)


State 29

    4 expr: INTNUMBER .

    $default  reduce using rule 4 (expr)


State 30

   15 expr: STRING .

    $default  reduce using rule 15 (expr)


State 31

   42 top_options: top_options TOP . expr PERCENT WITH TIES
   43            | top_options TOP . expr PERCENT
   44            | top_options TOP . expr WITH TIES
   45            | top_options TOP . expr

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    expr  go to state 43


State 32

   48 select_expr: '*' .

    $default  reduce using rule 48 (select_expr)


State 33

    5 expr: '(' . expr ')'

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    expr  go to state 44


State 34

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . COMPARISON expr
   11     | expr . AND expr
   12     | expr . OR expr
   16     | expr . LIKE expr
   17     | expr . IN '(' val_list ')'
   18     | expr . BETWEEN expr AND expr
   49 select_expr: expr . opt_as_alias

    NAME        shift, and go to state 45
    AS          shift, and go to state 46
    LIKE        shift, and go to state 47
    AND         shift, and go to state 48
    OR          shift, and go to state 49
    IN          shift, and go to state 50
    BETWEEN     shift, and go to state 51
    COMPARISON  shift, and go to state 52
    '+'         shift, and go to state 53
    '-'         shift, and go to state 54
    '*'         shift, and go to state 55
    '/'         shift, and go to state 56

    $default  reduce using rule 51 (opt_as_alias)

    opt_as_alias  go to state 57


State 35

   37 query_specification: SELECT select_options top_options select_expr_list . opt_into opt_from_list opt_where opt_groupby opt_having opt_orderby
   47 select_expr_list: select_expr_list . ',' select_expr

    INTO  shift, and go to state 58
    ','   shift, and go to state 59

    $default  reduce using rule 54 (opt_into)

    opt_into  go to state 60


State 36

   46 select_expr_list: select_expr .

    $default  reduce using rule 46 (select_expr_list)


State 37

   26 query_expression: '(' query_expression ')' opt_query .

    $default  reduce using rule 26 (query_expression)


State 38

   32 union_statement: opt_union '(' query_expression . ')'

    ')'  shift, and go to state 61


State 39

   19 expr: NAME '(' . opt_val_list ')'

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    $default  reduce using rule 20 (opt_val_list)

    expr          go to state 62
    opt_val_list  go to state 63
    val_list      go to state 64


State 40

   14 expr: NAME '.' . NAME

    NAME  shift, and go to state 65


State 41

   50 select_expr: NAME '=' . expr

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    expr  go to state 66


State 42

   13 expr: NAME .
   14     | NAME . '.' NAME
   19     | NAME . '(' opt_val_list ')'

    '('  shift, and go to state 39
    '.'  shift, and go to state 40

    '('       [reduce using rule 13 (expr)]
    $default  reduce using rule 13 (expr)


State 43

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . COMPARISON expr
   11     | expr . AND expr
   12     | expr . OR expr
   16     | expr . LIKE expr
   17     | expr . IN '(' val_list ')'
   18     | expr . BETWEEN expr AND expr
   42 top_options: top_options TOP expr . PERCENT WITH TIES
   43            | top_options TOP expr . PERCENT
   44            | top_options TOP expr . WITH TIES
   45            | top_options TOP expr .

    PERCENT     shift, and go to state 67
    WITH        shift, and go to state 68
    LIKE        shift, and go to state 47
    AND         shift, and go to state 48
    OR          shift, and go to state 49
    IN          shift, and go to state 50
    BETWEEN     shift, and go to state 51
    COMPARISON  shift, and go to state 52
    '+'         shift, and go to state 53
    '-'         shift, and go to state 54
    '*'         shift, and go to state 55
    '/'         shift, and go to state 56

    '*'       [reduce using rule 45 (top_options)]
    $default  reduce using rule 45 (top_options)


State 44

    5 expr: '(' expr . ')'
    6     | expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . COMPARISON expr
   11     | expr . AND expr
   12     | expr . OR expr
   16     | expr . LIKE expr
   17     | expr . IN '(' val_list ')'
   18     | expr . BETWEEN expr AND expr

    LIKE        shift, and go to state 47
    AND         shift, and go to state 48
    OR          shift, and go to state 49
    IN          shift, and go to state 50
    BETWEEN     shift, and go to state 51
    COMPARISON  shift, and go to state 52
    '+'         shift, and go to state 53
    '-'         shift, and go to state 54
    '*'         shift, and go to state 55
    '/'         shift, and go to state 56
    ')'         shift, and go to state 69


State 45

   53 opt_as_alias: NAME .

    $default  reduce using rule 53 (opt_as_alias)


State 46

   52 opt_as_alias: AS . NAME

    NAME  shift, and go to state 70


State 47

   16 expr: expr LIKE . expr

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    expr  go to state 71


State 48

   11 expr: expr AND . expr

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    expr  go to state 72


State 49

   12 expr: expr OR . expr

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    expr  go to state 73


State 50

   17 expr: expr IN . '(' val_list ')'

    '('  shift, and go to state 74


State 51

   18 expr: expr BETWEEN . expr AND expr

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    expr  go to state 75


State 52

   10 expr: expr COMPARISON . expr

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    expr  go to state 76


State 53

    6 expr: expr '+' . expr

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    expr  go to state 77


State 54

    7 expr: expr '-' . expr

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    expr  go to state 78


State 55

    8 expr: expr '*' . expr

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    expr  go to state 79


State 56

    9 expr: expr '/' . expr

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    expr  go to state 80


State 57

   49 select_expr: expr opt_as_alias .

    $default  reduce using rule 49 (select_expr)


State 58

   55 opt_into: INTO . NAME

    NAME  shift, and go to state 81


State 59

   47 select_expr_list: select_expr_list ',' . select_expr

    NAME       shift, and go to state 28
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '*'        shift, and go to state 32
    '('        shift, and go to state 33

    expr         go to state 34
    select_expr  go to state 82


State 60

   37 query_specification: SELECT select_options top_options select_expr_list opt_into . opt_from_list opt_where opt_groupby opt_having opt_orderby

    FROM  shift, and go to state 83

    $default  reduce using rule 56 (opt_from_list)

    opt_from_list  go to state 84


State 61

   32 union_statement: opt_union '(' query_expression ')' .

    $default  reduce using rule 32 (union_statement)


State 62

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . COMPARISON expr
   11     | expr . AND expr
   12     | expr . OR expr
   16     | expr . LIKE expr
   17     | expr . IN '(' val_list ')'
   18     | expr . BETWEEN expr AND expr
   22 val_list: expr .
   23         | expr . ',' val_list

    LIKE        shift, and go to state 47
    AND         shift, and go to state 48
    OR          shift, and go to state 49
    IN          shift, and go to state 50
    BETWEEN     shift, and go to state 51
    COMPARISON  shift, and go to state 52
    '+'         shift, and go to state 53
    '-'         shift, and go to state 54
    '*'         shift, and go to state 55
    '/'         shift, and go to state 56
    ','         shift, and go to state 85

    $default  reduce using rule 22 (val_list)


State 63

   19 expr: NAME '(' opt_val_list . ')'

    ')'  shift, and go to state 86


State 64

   21 opt_val_list: val_list .

    $default  reduce using rule 21 (opt_val_list)


State 65

   14 expr: NAME '.' NAME .

    $default  reduce using rule 14 (expr)


State 66

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . COMPARISON expr
   11     | expr . AND expr
   12     | expr . OR expr
   16     | expr . LIKE expr
   17     | expr . IN '(' val_list ')'
   18     | expr . BETWEEN expr AND expr
   50 select_expr: NAME '=' expr .

    LIKE        shift, and go to state 47
    AND         shift, and go to state 48
    OR          shift, and go to state 49
    IN          shift, and go to state 50
    BETWEEN     shift, and go to state 51
    COMPARISON  shift, and go to state 52
    '+'         shift, and go to state 53
    '-'         shift, and go to state 54
    '*'         shift, and go to state 55
    '/'         shift, and go to state 56

    $default  reduce using rule 50 (select_expr)


State 67

   42 top_options: top_options TOP expr PERCENT . WITH TIES
   43            | top_options TOP expr PERCENT .

    WITH  shift, and go to state 87

    $default  reduce using rule 43 (top_options)


State 68

   44 top_options: top_options TOP expr WITH . TIES

    TIES  shift, and go to state 88


State 69

    5 expr: '(' expr ')' .

    $default  reduce using rule 5 (expr)


State 70

   52 opt_as_alias: AS NAME .

    $default  reduce using rule 52 (opt_as_alias)


State 71

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . COMPARISON expr
   11     | expr . AND expr
   12     | expr . OR expr
   16     | expr . LIKE expr
   16     | expr LIKE expr .
   17     | expr . IN '(' val_list ')'
   18     | expr . BETWEEN expr AND expr

    BETWEEN     shift, and go to state 51
    COMPARISON  shift, and go to state 52
    '+'         shift, and go to state 53
    '-'         shift, and go to state 54
    '*'         shift, and go to state 55
    '/'         shift, and go to state 56

    LIKE  error (nonassociative)
    IN    error (nonassociative)

    $default  reduce using rule 16 (expr)


State 72

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . COMPARISON expr
   11     | expr . AND expr
   11     | expr AND expr .
   12     | expr . OR expr
   16     | expr . LIKE expr
   17     | expr . IN '(' val_list ')'
   18     | expr . BETWEEN expr AND expr

    LIKE        shift, and go to state 47
    IN          shift, and go to state 50
    BETWEEN     shift, and go to state 51
    COMPARISON  shift, and go to state 52
    '+'         shift, and go to state 53
    '-'         shift, and go to state 54
    '*'         shift, and go to state 55
    '/'         shift, and go to state 56

    $default  reduce using rule 11 (expr)


State 73

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . COMPARISON expr
   11     | expr . AND expr
   12     | expr . OR expr
   12     | expr OR expr .
   16     | expr . LIKE expr
   17     | expr . IN '(' val_list ')'
   18     | expr . BETWEEN expr AND expr

    LIKE        shift, and go to state 47
    AND         shift, and go to state 48
    IN          shift, and go to state 50
    BETWEEN     shift, and go to state 51
    COMPARISON  shift, and go to state 52
    '+'         shift, and go to state 53
    '-'         shift, and go to state 54
    '*'         shift, and go to state 55
    '/'         shift, and go to state 56

    $default  reduce using rule 12 (expr)


State 74

   17 expr: expr IN '(' . val_list ')'

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    expr      go to state 62
    val_list  go to state 89


State 75

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . COMPARISON expr
   11     | expr . AND expr
   12     | expr . OR expr
   16     | expr . LIKE expr
   17     | expr . IN '(' val_list ')'
   18     | expr . BETWEEN expr AND expr
   18     | expr BETWEEN expr . AND expr

    LIKE        shift, and go to state 47
    AND         shift, and go to state 90
    OR          shift, and go to state 49
    IN          shift, and go to state 50
    BETWEEN     shift, and go to state 51
    COMPARISON  shift, and go to state 52
    '+'         shift, and go to state 53
    '-'         shift, and go to state 54
    '*'         shift, and go to state 55
    '/'         shift, and go to state 56


State 76

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . COMPARISON expr
   10     | expr COMPARISON expr .
   11     | expr . AND expr
   12     | expr . OR expr
   16     | expr . LIKE expr
   17     | expr . IN '(' val_list ')'
   18     | expr . BETWEEN expr AND expr

    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 10 (expr)


State 77

    6 expr: expr . '+' expr
    6     | expr '+' expr .
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . COMPARISON expr
   11     | expr . AND expr
   12     | expr . OR expr
   16     | expr . LIKE expr
   17     | expr . IN '(' val_list ')'
   18     | expr . BETWEEN expr AND expr

    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 6 (expr)


State 78

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    7     | expr '-' expr .
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . COMPARISON expr
   11     | expr . AND expr
   12     | expr . OR expr
   16     | expr . LIKE expr
   17     | expr . IN '(' val_list ')'
   18     | expr . BETWEEN expr AND expr

    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 7 (expr)


State 79

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    8     | expr '*' expr .
    9     | expr . '/' expr
   10     | expr . COMPARISON expr
   11     | expr . AND expr
   12     | expr . OR expr
   16     | expr . LIKE expr
   17     | expr . IN '(' val_list ')'
   18     | expr . BETWEEN expr AND expr

    $default  reduce using rule 8 (expr)


State 80

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
    9     | expr '/' expr .
   10     | expr . COMPARISON expr
   11     | expr . AND expr
   12     | expr . OR expr
   16     | expr . LIKE expr
   17     | expr . IN '(' val_list ')'
   18     | expr . BETWEEN expr AND expr

    $default  reduce using rule 9 (expr)


State 81

   55 opt_into: INTO NAME .

    $default  reduce using rule 55 (opt_into)


State 82

   47 select_expr_list: select_expr_list ',' select_expr .

    $default  reduce using rule 47 (select_expr_list)


State 83

   57 opt_from_list: FROM . opt_from

    NAME  shift, and go to state 91
    '('   shift, and go to state 92

    opt_from        go to state 93
    from_statement  go to state 94
    joined_table    go to state 95


State 84

   37 query_specification: SELECT select_options top_options select_expr_list opt_into opt_from_list . opt_where opt_groupby opt_having opt_orderby

    WHERE  shift, and go to state 96

    $default  reduce using rule 81 (opt_where)

    opt_where  go to state 97


State 85

   23 val_list: expr ',' . val_list

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    expr      go to state 62
    val_list  go to state 98


State 86

   19 expr: NAME '(' opt_val_list ')' .

    $default  reduce using rule 19 (expr)


State 87

   42 top_options: top_options TOP expr PERCENT WITH . TIES

    TIES  shift, and go to state 99


State 88

   44 top_options: top_options TOP expr WITH TIES .

    $default  reduce using rule 44 (top_options)


State 89

   17 expr: expr IN '(' val_list . ')'

    ')'  shift, and go to state 100


State 90

   11 expr: expr AND . expr
   18     | expr BETWEEN expr AND . expr

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    expr  go to state 101


State 91

   60 from_statement: NAME . opt_as_alias
   61               | NAME . '.' NAME opt_as_alias
   65 joined_table: NAME . cross_outer APPLY NAME

    NAME   shift, and go to state 45
    AS     shift, and go to state 46
    OUTER  shift, and go to state 102
    CROSS  shift, and go to state 103
    '.'    shift, and go to state 104

    CROSS     [reduce using rule 51 (opt_as_alias)]
    $default  reduce using rule 51 (opt_as_alias)

    opt_as_alias  go to state 105
    cross_outer   go to state 106


State 92

   66 joined_table: '(' . joined_table ')'

    NAME  shift, and go to state 91
    '('   shift, and go to state 92

    from_statement  go to state 107
    joined_table    go to state 108


State 93

   57 opt_from_list: FROM opt_from .
   59 opt_from: opt_from . ',' from_statement

    ','  shift, and go to state 109

    $default  reduce using rule 57 (opt_from_list)


State 94

   58 opt_from: from_statement .
   63 joined_table: from_statement . join_type from_statement ON expr
   64             | from_statement . CROSS JOIN from_statement

    INNER  shift, and go to state 110
    RIGHT  shift, and go to state 111
    LEFT   shift, and go to state 112
    FULL   shift, and go to state 113
    CROSS  shift, and go to state 114

    JOIN          reduce using rule 68 (opt_join_type)
    REDUCE        reduce using rule 68 (opt_join_type)
    REPLICATE     reduce using rule 68 (opt_join_type)
    REDISTRIBUTE  reduce using rule 68 (opt_join_type)
    $default      reduce using rule 58 (opt_from)

    join_type      go to state 115
    opt_join_type  go to state 116


State 95

   62 from_statement: joined_table .

    $default  reduce using rule 62 (from_statement)


State 96

   82 opt_where: WHERE . expr

    NAME       shift, and go to state 42
    INTNUMBER  shift, and go to state 29
    STRING     shift, and go to state 30
    '('        shift, and go to state 33

    expr  go to state 117


State 97

   37 query_specification: SELECT select_options top_options select_expr_list opt_into opt_from_list opt_where . opt_groupby opt_having opt_orderby

    GROUP  shift, and go to state 118

    $default  reduce using rule 83 (opt_groupby)

    opt_groupby  go to state 119


State 98

   23 val_list: expr ',' val_list .

    $default  reduce using rule 23 (val_list)


State 99

   42 top_options: top_options TOP expr PERCENT WITH TIES .

    $default  reduce using rule 42 (top_options)


State 100

   17 expr: expr IN '(' val_list ')' .

    $default  reduce using rule 17 (expr)


State 101
